<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Sensing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sensors_list">Sensors list</string>
    <string name="action_wifi">Wi-Fi</string>
    <string name="save_wifi">Save Wi-Fi</string>
    <string name="read_wifi">Read Wi-Fi</string>
    <string name="measure">Measurement 1</string> 
     <string name="measure_150">Measurement 2</string> 
    <string name="localize">Localization</string>
    <string name="delete">Delete data</string>
    <string name="defaultNumber">110</string>
    <string name="occurs">11</string>
    

</resources>
